<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contact_information_scroll_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/app_background">

    <LinearLayout
        android:id="@+id/contact_information_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/last_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_input"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/first_name_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_input"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/hospital_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hospital_input"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/patient_id_number_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patient_id_number_input"
            android:inputType="textCapCharacters" />

        <EditText
            android:id="@+id/contact_number_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_number_input"
            android:inputType="phone" />

        <EditText
            android:id="@+id/address_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_input"
            android:inputType="textPostalAddress|textCapWords|textNoSuggestions" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_input"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:onClick="saveAndNext"
            android:text="@string/next_button" />
    </LinearLayout>
</ScrollView>