<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username_input"
        android:hint="@string/username_input"
        android:textColorHint="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="153dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password_input"
        android:inputType="textPassword"
        android:hint="@string/password_input"
        android:textColorHint="@android:color/white"
        android:layout_below="@+id/username_input"
        android:layout_alignStart="@+id/username_input" />

    <EditText
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:id="@+id/email_input"
        android:inputType="textEmailAddress"
        android:hint="@string/email_input"
        android:textColorHint="@android:color/white"
        android:layout_below="@+id/password_input"
        android:layout_alignStart="@+id/password_input"
        android:visibility="gone" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/visible_check"
        android:layout_above="@+id/login_button"
        android:layout_alignStart="@+id/register_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_below="@+id/password_input"
        android:layout_toStartOf="@+id/password_input"
        android:layout_marginTop="58dp"
        android:id="@+id/login_button"
        android:onClick="login" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:layout_alignTop="@+id/login_button"
        android:layout_toEndOf="@+id/password_input"
        android:id="@+id/register_button"
        android:onClick="register" />

</RelativeLayout>